--- a/untitled.html
+++ b/untitled.html
@@ -4,7 +4,7 @@
 	<title>hritvik</title>
 </head>
 <body>
-<form action="/myaction" method="post">
+<form action="/myaction" method="get">
 <input type="text" name="timepass">
 <input type="submit" name="butt" value="submit">
 </form>
