--- a/untitled.html
+++ b/untitled.html
@@ -4,9 +4,10 @@
 	<title>hritvik</title>
 </head>
 <body>
-<form action="/myaction" method="get">
+<form action="/myaction" method="post">
 <input type="text" name="timepass">
 <input type="submit" name="butt" value="submit">
 </form>
+<h1>I am trying to make a dictionary....</h1>
 </body>
 </html>
